--- a/doctor-website/src/components/index.module.css
+++ b/doctor-website/src/components/index.module.css
@@ -52,3 +52,12 @@
   max-width: none;
   line-height: var(--line-height-loose);
 }
+
+.container {
+  width: 600px; /* Adjust the width as needed */
+  margin: 0 auto; /* Center the container horizontally */
+}
+
+.textLeft {
+  text-align: left; /* Align paragraph text to the left */
+}
